--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="card">
 
         
-        <img src="./images/image-qr-code.png" />
+        <img src="image-qr-code.png" />
         
 
         <div class="card-content">
